--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/community.css">
     <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js" type="application/javascript"></script>
 
 </head>
@@ -17,7 +18,7 @@
                 <span class="sr-only">麻将社区</span>
 
             </button>
-            <a class="navbar-brand" href="#">麻将社区</a>
+            <a class="navbar-brand" href="/">麻将社区</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,5 +53,37 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<div class="container-fluid main">
+    <div class="row">
+        <div class=" col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <span class="glyphicon glyphicon-list" aria-hidden="true">发现</span>
+            <hr>
+            <div class="media" th:each="question:${questions}">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object img-rounded"
+                             th:src="${question.user.avatarUrl}">
+                    </a>
+
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading" th:text="${question.title}"></h4>
+                    <span th:text="${question.description}"></span><br>
+                    <span class="text-desc"><span th:text="${question.commentCount}"></span>个回复 ·<span th:text="${question.viewCount}"></span>次浏览·
+                    <span th:text="${#dates.format(question.gmtCreate,'dd MMMMM yyyy')}"></span></span>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <h3>热门话题</h3><br>
+            ·问题标题：请用精简的语言描述您发布的问题，不超过25字<br>
+            ·问题补充：详细补充您的问题，确保问题描述清晰直观，并提供一些相关的资料<br>
+            ·选择标签：选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字<br>
+
+        </div>
+    </div>
+</div>
 </body>
 </html>
