--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/community.css">
+    <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js" type="application/javascript"></script>
 
 </head>
