--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -21,6 +21,7 @@
             <span class="glyphicon glyphicon-plus" aria-hidden="true">发起</span>
             <hr>
             <form action="/publish" method="post">
+                <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）</label>
                     <input type="text" class="form-control" th:value="${title}"id="title" name="title" placeholder="问题标题......">
