--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -39,6 +39,32 @@
                     </a>
                 </div>
 
+
+                <!--回复输入框-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h4>
+                        提交回复
+                    </h4>
+                    <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
+                        <div class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object img-rounded"
+                                         th:src="${session.user != null ? session.user.avatarUrl : '/images/default-avatar.png'}">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h5 class="media-heading">
+                                    <span th:text="${session.user != null ? session.user.name : '匿名用户'}"></span>
+                                </h5>
+                            </div>
+                        </div>
+                        <input type="hidden" id="question_id" th:value="${question.id}">
+                        <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
+                        <button type="button" class="btn btn-success btn-comment" onclick="post()">回复</button>
+                    </div>
+                </div>
             </div>
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
