--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -24,20 +24,36 @@
                         </div>
                         <button type="submit" class="btn btn-default">搜索</button>
                     </form>
+                    <ul class="nav navbar-nav">
+                        <script>
+                            function clickNav(label) {
+                                gtag('event', 'click', {
+                                    'event_category': 'LINK',
+                                    'event_label': label,
+                                    'transport_type': 'NAV'
+                                })
+                            }
+                        </script>
+                        <li th:each="ad : ${#httpServletRequest.getServletContext().getAttribute('NAV')}">
+                            <a th:href="${ad.url}" th:text="${ad.title}" th:onclick="clickNav([[${ad.title}]])"
+                               target="_blank"></a>
+                        </li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li th:if="${session.user!=null}">
-                            <a href="/publish">发布</a>
+                        <li th:if="${session.user != null}">
+                            <a href="/publish">提问</a>
+                        </li>
+                        <li><a href="/profile/replies">通知 <span class="badge" th:text="${session.unreadCount}"></span></a>
                         </li>
                         <li class="dropdown" th:if="${session.user != null}">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                               aria-haspopup="true" aria-expanded="false"
-                            >
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                               aria-expanded="false">
                                 <span th:text="${session.user.getName()}"></span>
-                                <span class="caret" ></span>
+                                <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="/profile/questions">我的问题</a></li>
-                                <li><a href="#">退出登录</a></li>
+                                <li><a href="/logout">退出登录</a></li>
                             </ul>
                         </li>
                         <li th:if="${session.user == null}">
